News UAT/force-app/main/default/objects/Spend_Tier_Mapping__c/Spend_Tier_Mapping__c.object-meta.xml
<CustomObject>
    <label>Spend to Tier Mapping</label>
    <nameField>
        <displayFormat>STM-{000}</displayFormat>
        <label>Mapping</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Spend to Tier Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>