News UAT/force-app/main/default/objects/Spend_Tier_Mapping__c/fields/Max_Spend__c.field-meta.xml
<CustomField>
    <fullName>Max_Spend__c</fullName>
    <defaultValue>999999999999999999</defaultValue>
    <description>To define a tier with no maximum spend use the value 999999999999999999 (i.e. 18 nines)</description>
    <inlineHelpText>To define a tier with no maximum spend use the value 999999999999999999 (i.e. 18 nines)</inlineHelpText>
    <label>Max Spend</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>