News UAT/force-app/main/default/objects/Spend_Tier_Mapping__c/fields/Min_Spend__c.field-meta.xml
<CustomField>
    <fullName>Min_Spend__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Min Spend</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>