News UAT/force-app/main/default/objects/Spend_Tier_Mapping__c/fields/Platform__c.field-meta.xml
<CustomField>
    <fullName>Platform__c</fullName>
    <label>Platform</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>