News UAT/force-app/main/default/objects/Spend_Tier_Mapping__c/fields/Tier__c.field-meta.xml
<CustomField>
    <fullName>Tier__c</fullName>
    <label>Tier</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>