News UAT/force-app/main/default/objects/Spend_Tier_Mapping__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Platform__c</columns>
    <columns>Segment__c</columns>
    <columns>Min_Spend__c</columns>
    <columns>Max_Spend__c</columns>
    <columns>Tier__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>